fixes layout issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,54 +1,3 @@
-<<<<<<< HEAD
-/* custom styles */
-body {
-  text-align: center;
-  background: #713585;
-  color: white;
-}
-img {
-  height: auto;
-  width: 200px;
-}
-
-.row {
-  height: 300px;
-}
-
-.col-xs-12 {
-  height: 300px;
-  background: tomato;
-  padding: 5px;
-}
-
-.col-sm-12 {
-  height: 300px;
-  background: tomato;
-  padding: 5px;
-}
-.col-md-4 {
-  height: 300px;
-  background: tomato;
-}
-
-
-@media(min-width:576px){
-  .list-group-item {
-    max-width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-}
-@media(min-width:768px){
-
-}
-@media(min-width:992px){
-
-}
-@media(min-width:1200px){
-
-}
-=======
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 
@@ -3470,4 +3419,3 @@ img {
 			}
 
 	}
->>>>>>> 6865daeb86b820e5fad35fca33800a37134e5328
